# photolio

./: .dockerignore  .gitignore  404.html  CNAME  Dockerfile.Backend  Dockerfile.Webapp  LICENSE  README.md  Taskfile.yml  asset-manifest.json  config.dev.toml  index.html  photolio.sln
.github/workflows/: backend-cd.yml  webapp-ci.yml  webapp-pages.yml
backend/: Cargo.toml  Dockerfile  Program.cs  README.md  Startup.cs  appsettings.Development.json  backend.csproj  config.dev.toml
backend/Controllers/: ImagesController.cs
backend/Extensions/: ConfigurationExtension.cs  ImageExtensions.cs
backend/Middleware/: ErrorHandler.cs
backend/Models/: ErrorModel.cs  ImageModel.cs
backend/Properties/: launchSettings.json
backend/Services/: ICacheService.cs  IImageService.cs  LocalImageService.cs  MemCacheService.cs  RedisCacheService.cs
backend/Util/: DateTimeUtil.cs
backend/src/: conf.rs  errors.rs  images.rs  interlock.rs  macros.rs  main.rs  models.rs  storage.rs  watcher.rs  ws.rs
backend/src/cache/: inmemory.rs  mod.rs  redis.rs  spec.rs
backend/src/storage/: local.rs  mod.rs  spec.rs
backend/src/ws/: middleware.rs  mod.rs  server.rs  util.rs
backend/src/ws/controllers/: admin.rs  images.rs  mod.rs
backend/src/ws/extractors/: token.rs
docs/: api.md
static/css/: main.07712008.css  main.07712008.css.map  main.2ea0afe8.chunk.css  main.2ea0afe8.chunk.css.map  main.5052d4eb.chunk.css  main.5052d4eb.chunk.css.map  (+2 more)
webapp/: .editorconfig  .prettierrc.yml  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
(+134 files in other folders)
