[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
actix-web = "4"
kamadak-exif = "0.5.4"
blurhash = "0.1.1"
chrono = "0.4"
image = "0.24.3"
threadpool = "1.8.1"
num_cpus = "1.0"