[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
actix-web = "4"
actix-cors = "0.7"
kamadak-exif = "0.5"
blurhash = "0.2"
chrono = { version = "^0.4", features = ["serde", "rustc-serialize"] }
image = "0.25"
threadpool = "1.8"
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
config = "0.14"
argparse = "0.2"
redis = "0.25"
notify = "6.1"
futures = "0.3"
once_cell = "1.16"
anyhow = "1.0"
